--- a/index.html
+++ b/index.html
@@ -287,21 +287,59 @@
     id="skills"
   >
     <div class="max-width">
-      <h2 class="title">My skills</h2>
+      <h2 class="title">My Skills</h2>
       <div class="skills-content">
         <div class="carousel owl-carousel">
 
-          <div class="card">
+          <div class="card react">
             <div class="box">
+              <h2 class="name">REsdsd</h2>
+              <div class="circle"></div>
               <img
-                src="./images/skills/react.png"
-                alt="React"
+                src="https://clipart-best.com/img/mario/mario-clip-art-5.png"
+                alt=""
+                class="img"
               >
-              <div class="text">React</div>
             </div>
           </div>
 
-          <div class="card">
+          <div class="card react">
+            <div class="box">
+              <h2 class="name">REsdsd</h2>
+              <div class="circle"></div>
+              <img
+                src="https://clipart-best.com/img/mario/mario-clip-art-5.png"
+                alt=""
+                class="img"
+              >
+            </div>
+          </div>
+
+          <div class="card react">
+            <div class="box">
+              <h2 class="name">REsdsd</h2>
+              <div class="circle"></div>
+              <img
+                src="https://clipart-best.com/img/mario/mario-clip-art-5.png"
+                alt=""
+                class="img"
+              >
+            </div>
+          </div>
+
+          <div class="card react">
+            <div class="box">
+              <h2 class="name">REsdsd</h2>
+              <div class="circle"></div>
+              <img
+                src="https://w7.pngwing.com/pngs/130/642/png-transparent-file-formats-a-dice-image-file-formats-chinese-style-dice.png"
+                alt=""
+                class="img"
+              >
+            </div>
+          </div>
+
+          <!-- <div class="card">
             <div class="box">
               <img
                 src="./images/skills/js.png"
@@ -329,67 +367,7 @@
               >
               <div class="text">Vue</div>
             </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <img
-                src="./images/skills/reactnative.png"
-                alt="React Native"
-              >
-              <div class="text">React Native</div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <img
-                src="./images/skills/node.png"
-                alt="Node"
-              >
-              <div class="text">Node</div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <img
-                src="./images/skills/flutter.png"
-                alt="Flutter"
-              >
-              <div class="text">Flutter</div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <img
-                src="./images/skills/typescript.png"
-                alt="Typescript"
-              >
-              <div class="text">Typescript</div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <img
-                src="./images/skills/css.png"
-                alt="CSS"
-              >
-              <div class="text">CSS</div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <img
-                src="./images/skills/html.png"
-                alt="HTML"
-              >
-              <div class="text">HTML</div>
-            </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -1423,6 +1401,13 @@
       >M.Sakhelashvili</a></p>
   </footer>
 
+  <script src="./js/tilt.js"></script>
+  <script>
+    VanillaTilt.init(document.querySelectorAll(".card"), {
+      max: 25,
+      speed: 400
+    });
+  </script>
   <script src="./js/script.js"></script>
   <script src="./js/mainSlider.js"></script>
   <script src="./js/swiper.js"></script>
