--- a/index.html
+++ b/index.html
@@ -177,7 +177,6 @@
         muted
         loop
       ></video>
-
       <div class="overlay">
       </div>
     </div>
@@ -268,7 +267,7 @@
                 <div class="main">Front End Development</div>
               </div>
 
-              <div class="test">Manage website development projects from initial design through completion, optimizing
+              <div class="text">Manage website development projects from initial design through completion, optimizing
                 all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
                 project requirements, goals, and desired functionality.
               </div>
@@ -285,7 +284,7 @@
                 <div class="main">Front End Development</div>
               </div>
 
-              <div class="test">Manage website development projects from initial design through completion, optimizing
+              <div class="text">Manage website development projects from initial design through completion, optimizing
                 all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
                 project requirements, goals, and desired functionality.
               </div>
@@ -302,7 +301,7 @@
                 <div class="main">Front End Development</div>
               </div>
 
-              <div class="test">Manage website development projects from initial design through completion, optimizing
+              <div class="text">Manage website development projects from initial design through completion, optimizing
                 all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
                 project requirements, goals, and desired functionality.
               </div>
@@ -319,7 +318,7 @@
                 <div class="main">Front End Development</div>
               </div>
 
-              <div class="test">Manage website development projects from initial design through completion, optimizing
+              <div class="text">Manage website development projects from initial design through completion, optimizing
                 all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
                 project requirements, goals, and desired functionality.
               </div>
@@ -336,10 +335,76 @@
                 <div class="main">Front End Development</div>
               </div>
 
-              <div class="test">Manage website development projects from initial design through completion, optimizing
+              <div class="text">Manage website development projects from initial design through completion, optimizing
                 all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
                 project requirements, goals, and desired functionality.
               </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="mobile">
+
+          <div class="card">
+            <div class="box">
+              <div class="text">Frontend Development</div>
+              <p>
+                Manage website development projects from initial design through completion, optimizing all cross-browser
+                and multi-platform compatibility. Work closely with programmers and clients to meet project
+                requirements,
+                goals, and desired functionality.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <div class="text">Backend Development</div>
+              <p>
+                Responsible for defining, developing, and evolving software in a fast paced and agile development
+                environment using the latest software methods and infrastructure. Work with a variety of
+                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <div class="text">Backend Development</div>
+              <p>
+                Responsible for defining, developing, and evolving software in a fast paced and agile development
+                environment using the latest software methods and infrastructure. Work with a variety of
+                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
+                Responsible for defining, developing, and evolving software in a fast paced and agile development
+                environment using the latest software methods and infrastructure. Work with a variety of
+                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
+                Responsible for defining, developing, and evolving software in a fast paced and agile development
+                environment using the latest software methods and infrastructure. Work with a variety of
+                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <div class="text">Backend Development</div>
+              <p>
+                Responsible for defining, developing, and evolving software in a fast paced and agile development
+                environment using the latest software methods and infrastructure. Work with a variety of
+                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <div class="text">Mobile Development</div>
+              <p>
+                Develop new mobile application on Android and IOS. Develops integration of the core systems or external
+                applications. Develop a method to build and launch applications at a fast pace. Complete code base
+                conversion to React Native with feature parity.
+              </p>
             </div>
           </div>
 
@@ -922,7 +987,7 @@
   </section>
 
   <!-- contact section start finish  -->
-  <section
+  <!-- <section
     class="contact"
     id="contact"
   >
@@ -996,9 +1061,6 @@
                 <span></span>
                 <span class="fab fa-linkedin-in"></span>
               </div>
-              <!-- <div class="text">
-                Link
-              </div> -->
             </div>
             <p>LinkedIn</p>
           </a>
@@ -1016,9 +1078,6 @@
                 <span></span>
                 <span class="fab fa-github"></span>
               </div>
-              <!-- <div class="text">
-                Link
-              </div> -->
             </div>
             <p>Github</p>
           </a>
@@ -1036,9 +1095,6 @@
                 <span></span>
                 <span class="fab fa-twitter"></span>
               </div>
-              <!-- <div class="text">
-                Link
-              </div> -->
             </div>
             <p>Twitter</p>
           </a>
@@ -1046,7 +1102,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- footer section start finish  -->
   <footer>
