--- a/index.html
+++ b/index.html
@@ -160,21 +160,40 @@
     id="home"
   >
     <div class="cover-container">
-      <video
+      <!-- <video
         src="https://designsupply-web.com/samplecontent/vender/codepen/20181014.mp4"
+        
         autoplay
         muted
         loop
-      ></video>
-      <div class="overlay"></div>
+      ></video> -->
+
+      <div class="lamp">
+        <div class="lava">
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob top"></div>
+          <div class="blob bottom"></div>
+
+        </div>
+      </div>
+      
+
+      <!-- <div class="overlay"></div> -->
       <div class="canvas">
-        <canvas id="scene"></canvas>
+        <canvas id="canvas"></canvas>
       </div>
     </div>
 
     <div class="text-container">
       <p>
-        Hello I'm a   
+        Hello I'm a
       </p>
       <p>
         <span class="typing"></span>
