--- a/index.html
+++ b/index.html
@@ -156,18 +156,10 @@
 
   <!-- home section start finish -->
   <section
-    class="showcase home"
+    class="home"
     id="home"
   >
     <div class="cover-container">
-      <!-- <video
-        src="https://designsupply-web.com/samplecontent/vender/codepen/20181014.mp4"
-        
-        autoplay
-        muted
-        loop
-      ></video> -->
-
       <div class="lamp">
         <div class="lava">
           <div class="blob"></div>
@@ -178,26 +170,15 @@
           <div class="blob"></div>
           <div class="blob"></div>
           <div class="blob"></div>
-          <div class="blob top"></div>
-          <div class="blob bottom"></div>
-
         </div>
       </div>
-      
-
-      <!-- <div class="overlay"></div> -->
       <div class="canvas">
         <canvas id="canvas"></canvas>
       </div>
     </div>
-
     <div class="text-container">
-      <p>
-        Hello I'm a
-      </p>
-      <p>
-        <span class="typing"></span>
-      </p>
+      <p>Hello I'm a</p>
+      <p><span class="typing"></span></p>
     </div>
 
   </section>
@@ -1139,7 +1120,7 @@
       >M.Sakhelashvili</a></p>
   </footer>
 
-  <script src="./js/anime.js"></script>
+  <script src="./js/cover-animation.js"></script>
   <script src="./js/tilt.js"></script>
   <script src="./js/script.js"></script>
   <script src="./js/mainSlider.js"></script>
