--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
-
   <link
     rel="stylesheet"
     href="./css/swiper.min.css"
@@ -29,10 +28,6 @@
     rel="stylesheet"
     href="./css/navigation.css"
   />
-  <!-- <link
-    rel="stylesheet"
-    href="./css/main-slider.css"
-  /> -->
   <link
     rel="stylesheet"
     href="./css/home.css"
@@ -73,30 +68,16 @@
     rel="preconnect"
     href="https://fonts.gstatic.com"
   />
-
-  <link
-    rel="preconnect"
-    href="https://fonts.gstatic.com"
-  >
   <link
     rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    href="./css/own-carousel.css"
   />
-
-
-  <script src="./js/icon-config.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-
 
   <link
     rel="icon"
     type="image/svg"
     href="./uploads/favicon.svg"
   />
-
   <title>Personal Portfolio Website</title>
 </head>
 
@@ -1120,10 +1101,14 @@
       >M.Sakhelashvili</a></p>
   </footer>
 
+
+  <script src="./js/typed.js"></script>
+  <script src="./js/jquery.js"></script>
+  <script src="./js/icon-config.js"></script>
+  <script src="./js/own-carousel.js"></script>
   <script src="./js/cover-animation.js"></script>
   <script src="./js/tilt.js"></script>
   <script src="./js/script.js"></script>
-  <script src="./js/mainSlider.js"></script>
   <script src="./js/swiper.js"></script>
 </body>
 
