--- a/index.html
+++ b/index.html
@@ -803,133 +803,25 @@
                 class="image"
                 style="background-image: url('https://picsum.photos/200/300');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>Online Shop</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    The application is built on the theme of the online store, has a customer-friendly admin panel.
+                    The user manages the products. Also controls various operations (e.g. orders, checkout and etc.)
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>React Native, Expo, Redux, Redux Thunk</span>
                 </div>
                 <div class="link">
                   <a href="">Read More</a>
                 </div>
               </div>
             </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
 
           </div>
         </div>
