--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/Mobile/shop.jpg');"
               >
                 <h3>Online Shop</h3>
               </div>
@@ -809,16 +809,174 @@
                 <div class="description">
                   <h4>Description</h4>
                   <span>
-                    The application is built on the theme of the online store, has a customer-friendly admin panel.
+                    The application is built on the theme of the online store. Sign in/ Sign up, has a
+                    customer-friendly admin panel.
                     The user manages the products. Also controls various operations (e.g. orders, checkout and etc.)
                   </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Native, Expo, Redux, Redux Thunk</span>
+                  <span>React Native, Expo, <br> Redux, Redux Thunk</span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/RN__E-Commerce-App"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/Mobile/cooking.jpg');"
+              >
+                <h3>Cooking</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    List of different categories of food recipes.
+                    Beautiful and simple user interface.
+                    Sort by food categories.
+                    Automatic distribution of categories.
+                    Function to add to favorites by user
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>React Native, Expo, <br> Redux, react native paper </span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/RN__Food-Recipes"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/Mobile/restaurant.jpg');"
+              >
+                <h3>Find a Food</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    List of restaurants.
+                    You can search all the objects in the database.
+                    <br>
+                    See restaurant pricing policy.
+                    <br>
+                    View ratings and read reviews.
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>React Native, Expo, <br> axios, yelp.com API </span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/RN__Restaurant-Search"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/Mobile/booking.jpg');"
+              >
+                <h3>Booking</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    Simplified application for searching people's vacation spots.
+                    Has a division into different categories.
+                    Review each item and display the reference price
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>React Native, Expo, <br> react navigation</span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/RN__Booking-UI"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/Mobile/place.jpg');"
+              >
+                <h3>Great Places</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    It is possible to add various large places to the database in the application.
+                    Google Maps service integrated.
+                    It is possible to take a picture and upload it to the place
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>React Native, Expo, <br> Redux, Redux Thunk, navigation</span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/RN__Camera-Map"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/Mobile/delivery.jpg');"
+              >
+                <h3>Delivery</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    UI of food delivery service user.
+                    <br>
+                    List of different product.
+                    <br>
+                    Filter categories to our taste.
+                    <br>
+                    Search, pricing policy and add to favorites feature
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>React Native, Expo, <br> react navigation</span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/RN__Food-Delivery-UI"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
